# cMergeSortParallel

./: CMakeLists.txt  Makefile
buildMakeFile/: 10M_1_to_64_output.txt  fileGen  mergeSortOpenMp  mergeSortPThread  mergeSortSequential  run_10000000_1_to_64.sh  run_10000_1_to_32.sh  run_10K_weak_scaling_2.sh  run_10K_weak_scaling_2_log_output.txt  run_10K_weak_scaling_data.sh  run_10M_weak_scaling_data.sh  run_10M_weak_scaling_instructions.sh
buildMakeFile/extras/: 10K_1_to_32_output.txt  10K_weak_scaling_1_direct_output.txt  10M_weak_scaling_1_direct.txt  10M_weak_scaling_1_direct_output.txt  run_10M_weak_scaling_2_log_output.txt
commonFunctions/: Q2_commonFunctions.c  Q2_commonFunctions.h
mergeSortPThread/: CMakeLists.txt  Q2_main.c  Q2_mergeSortParallelPThread.c  Q2_mergeSortParallelPThread.h  main.c  mergeSortParallelPThread.c
mergeSortSequential/: Q2_mergeSortSequential.c
